PROYECTO_FINAL_CORRECIONES

--- a/TUMORES_CEREBRALES_MRI/PY_FINAL_DP.ipynb
+++ b/TUMORES_CEREBRALES_MRI/PY_FINAL_DP.ipynb
@@ -5,7 +5,7 @@
    "id": "b0cc022d-e8f7-43cd-9b47-e4d3c70726b5",
    "metadata": {},
    "source": [
-    "# **APLICACION DE REDES NEURONALES PARA LA CLASIFICACION Y DETECCION DE TUMORES CEREBRALES CON IMAGENES DE RESONANCIA MAGNETICA**\n"
+    "# **CLASIFICACIÓN Y DETECCIÓN DE TUMORES CEREBRALES CON CNN Y API EN FLASK A TRAVÉS DE IMÁGENES DE RESONANCIA MAGNÉTICA**"
    ]
   },
   {
